[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = "advent of code 2023"
authors = ["matthew <matthew@melio.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
advent-of-code-data= "^2.0.1"
browser-cookie3 = "^0.19.1"
black = "^23.11.0"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
